--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"astro-expressive-code": "^0.33.5",
 		"astro-icon": "^1.1.0",
 		"clsx": "^2.1.0",
+		"dics": "^2.6.1",
 		"mdast-util-to-string": "^4.0.0",
 		"npm": "^10.8.2",
 		"reading-time": "^1.5.0",
@@ -30,6 +31,7 @@
 		"sharp": "^0.33.2",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss": "^3.4.1",
+		"tw-elements": "^2.0.0",
 		"typescript": "^5.4.2"
 	},
 	"devDependencies": {
